rancid-git (2.3.9-5) unstable; urgency=low
    [ Egor Miadzvedzeu ]
    * Unofficial package
    * Added Huawei config

 -- Egor Miadzvedzeu <egor.miadzvedzeu@tatacommunications.com>  Thu, 21 Jul 2016 15:38:26 -0400
rancid-git (2.3.9-4) unstable; urgency=low

  [ Vincent Bernat ]
  * Unofficial package.

  [ Jesse Norell ]
  * Added support for Telco Systems T5C (telco)
  * Added support for ZyXel switches (zyxel)
  * Added support for pfSense (pfsense)
  * Added support for Ubiquiti EdgeSwitch (ubnt-es)
  * Added support for Ubiquiti AirOS radios and ToughSwitch (ubnt)
  * Updated looking glass (rancid-cgi).

 -- Vincent Bernat <bernat@debian.org>  Sat, 13 Feb 2016 11:17:37 +0100