@@ -61,6 +61,7 @@ $vendor =~ tr/[A-Z]/[a-z]/;
     'cat5'		=> 'cat5rancid',
     'cisco'		=> 'rancid',
     'cisco-nx'		=> 'nxrancid',
+    'cisco-sb'		=> 'csbrancid',
     'cisco-xr'		=> 'xrrancid',
     'ciscoucs'		=> 'ucsrancid',
     'css'		=> 'cssrancid',
