@@ -58,6 +58,7 @@ Alteon,
 Avocent (Cyclades),
 Bay Networks (nortel),
 Blade Network Technologies (BNT),
+Cisco Small Business,
 ADC-kentrox EZ-T3 mux,
 Foundry,
 HP Procurve switches and Cisco AGMs,
@@ -76,6 +77,7 @@ named
 .B avologin,
 .B blogin,
 .B bntlogin,
+.B csblogin,
 .B elogin,
 .B flogin,
 .B fnlogin,
