@@ -44,6 +44,9 @@ Bay Networks (nortel)
 .B cat5rancid
 Cisco catalyst switches
 .TP
+.B csbrancid
+Cisco Small Business switches
+.TP
 .B cssrancid
 Cisco content services switches
 .TP
